--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Work Sans", sans-serif;
-  background-color: #f7f7f7;
+  font-family: 'Roboto', sans-serif;
   color: rgb(87, 85, 85);
 }
 b {
@@ -11,12 +10,44 @@ b {
   color: rgb(80, 80, 80);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Crimson Text", serif;
-  color: rgb(87, 85, 85);
+button {
+  outline: none;
+}
+
+.slidecontainer1 {
+  background: transparent;
+  display: inline-block;
+  padding: 5px;
+  width: 15vw;
+}
+
+.slider1 {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: #949494;
+  outline: none;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider1:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.slider1::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  background: rgb(247, 181, 0);
+  cursor: pointer;
+}
+
+.slider1::-moz-range-thumb {
+  width: 12px;
+  height: 12px;
+  background: black;
+  cursor: pointer;
 }
