--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: rgb(87, 85, 85);
+  user-select: none;
 }
 b {
   font-weight: 600;
   color: rgb(80, 80, 80);
 }
 
+.logo{
+  font-family: 'Montserrat', sans-serif;
+}
+
 button {
-  outline: none;
+  outline: none !important;
+}
+
+.button1 {
+  width: 100%;
+  background: transparent;
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 0.1em solid #ffffff;
+  color: #ffffff;
+  margin: 0 0.3em 0.3em 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  text-align: center;
+  transition: all 0.2s;
+  box-shadow: none;
+}
+
+.button1:hover {
+  background: #ffffff;
+  color: grey;
 }
 
 .slidecontainer1 {
   background: transparent;
   display: inline-block;
   padding: 5px;
-  width: 15vw;
+  width: 100%;
 }
 
 .slider1 {
@@ -41,11 +68,73 @@ button {
   appearance: none;
   width: 12px;
   height: 12px;
-  background: rgb(247, 181, 0);
+  background: rgb(247, 140, 0);
   cursor: pointer;
 }
 
 .slider1::-moz-range-thumb {
+  width: 12px;
+  height: 12px;
+  background: black;
+  cursor: pointer;
+}
+
+.slider2 {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: #949494;
+  outline: none;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider2:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.slider2::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  background: rgb(111, 173, 255);
+  cursor: pointer;
+}
+
+.slider2::-moz-range-thumb {
+  width: 12px;
+  height: 12px;
+  background: black;
+  cursor: pointer;
+}
+
+.slider3 {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: #949494;
+  outline: none;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider3:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.slider3::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  background: rgb(255, 255, 255);
+  cursor: pointer;
+}
+
+.slider3::-moz-range-thumb {
   width: 12px;
   height: 12px;
   background: black;
