--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
 * {
   box-sizing: border-box;
@@ -8,6 +8,11 @@
   color: rgb(87, 85, 85);
   user-select: none;
   
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: 200;
 }
 
 body {
